@@ -1,3 +1,10 @@
+2011-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test/input/unused_import.py:
+	  Change to an import that exists on older pythons.
+	* test/expected/unused_import:
+	  Adapt expected output.
+
 2011-01-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* test/input/unused_import.py:
